Bug 96736 - Save toolbar dropdown doesn't update icons after theme change
Summary: Save toolbar dropdown doesn't update icons after theme change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: low minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.3.0
Keywords:
: 97317 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-27 13:06 UTC by A (Andy)
Modified: 2016-09-25 15:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A (Andy) 2015-12-27 13:06:38 UTC
User-Agent:       Mozilla/5.0 (Windows NT 6.3; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
Build Identifier: LibreOffice 5.1.0.1

With LO 5.1. there seems to have been a change in the "Save" button behaviour?  
The "Save" button is active all the time even if no change was made.  But only if a change is made it saves the file when pressing the "Save" button, otherwise "Save As..." and "Save Remote File..." as possible actions are shown.  
But if this change was made intentionally it seems maybe to be some degree of duplication, because the separate "Save As..." button is also still available in the toolbar if no change was made?  

In addition, the "Save As..." icon in the "Save" button is not the same as the original "Save As..." button.

Would it not be better to keep to old "Save" button behaviour that the "Save" button is only active if a change was made?  What is the rationale behind this change, if this was made intentionally?

Furthermore, if you change the icon set to any other icon set than Tango then the "Save As..." icon under the "Save" button is still like in the Tango icon set.

Reproducible: Always

Steps to Reproduce:
1. Open WRITER, IMPRESS, CALC or DRAW
2. Make any change to the new document
3. Save it with the "Save" button in the toolbar at the top
-> "Save" button is still active after the file was saved without any further change
4. Press the "Save" button again
-> A drop-down list opens with the alternatives "Save As..." and "Save Remote File..."
-> Compare the "Save As..." icon under the "Save" button with the original "Save As..." button icon
5. Change the icon sets (TOOLS -> OPTIONS -> section LIBREOFFICE -> subsection VIEW)
-> Look at the icon "Save As..." if no change was made and the "Save" button is pressed



[Information automatically included from LibreOffice]
Locale: en-GB
OS: Windows (All)
OS is 64bit: yes


Reset User Profile?No
Comment 1 Maxim Monastirsky 2015-12-27 13:33:23 UTC
(In reply to A (Andy) from comment #0)
> With LO 5.1. there seems to have been a change in the "Save" button
> behaviour?
Yes, but what you see in 5.1RC1 isn't supposed to be the final solution. Sadly some WIP code got into that build, and the plan is to either backport the rest before 5.1RC2, or revert for 5.1 and postpone the new behavior to 5.2.

> But if this change was made intentionally it seems maybe to be some degree
> of duplication, because the separate "Save As..." button is also still
> available in the toolbar if no change was made?
In the final solution the separate "Save As" button won't be on the toolbar by default.

> In addition, the "Save As..." icon in the "Save" button is not the same as
> the original "Save As..." button.
It's the small variation of it. Turn your toolbar icon size to small, and you'll see.

> Would it not be better to keep to old "Save" button behaviour that the
> "Save" button is only active if a change was made?  What is the rationale
> behind this change, if this was made intentionally?
http://lists.freedesktop.org/archives/libreoffice/2015-December/071519.html

> Furthermore, if you change the icon set to any other icon set than Tango
> then the "Save As..." icon under the "Save" button is still like in the
> Tango icon set.
Let's concentrate on this, as other issues were already discussed in other places (like Bug 96590). Changing summary to reflect this.
Comment 2 A (Andy) 2015-12-27 14:40:00 UTC
(In reply to Maxim Monastirsky from comment #1)
...

@Maxim: Thank you very much for your detailed feedback and reply.
Comment 3 Maxim Monastirsky 2016-01-23 17:35:34 UTC
*** Bug 97317 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2016-09-25 15:52:23 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02ddfd10e9e46e2b121416d815303c386400ba6f

tdf#96736 Let MenuBarManager handle the save dropdown

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.