tdf#96736 Let MenuBarManager handle the save dropdown

Instead of trying to do everything (icon theme
changes, disabling commands etc.) manually.

Change-Id: Iffd420bf09ccd566e96f39cb9684ab466a7c6555