framework/Library_fwk.mk
@@ -141,7 +141,6 @@ $(eval $(call gb_Library_add_exception_objects,fwk,\
     framework/source/uielement/progressbarwrapper \
     framework/source/uielement/recentfilesmenucontroller \
     framework/source/uielement/resourcemenucontroller \
-    framework/source/uielement/saveasmenucontroller \
     framework/source/uielement/spinfieldtoolbarcontroller \
     framework/source/uielement/statusbar \
     framework/source/uielement/statusbaritem \
